// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendTransactionForm should render 1`] = `
<div>
  <section>
    <div
      class="space-y-5"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
        </label>
        <div>
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SendTransactionForm__network-menu"
            data-testid="SelectNetwork"
            role="combobox"
          >
            <label
              for="SendTransactionForm__network-input"
              id="SendTransactionForm__network-label"
            />
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
                data-testid="SelectNetworkInput__network"
              />
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="SendTransactionForm__network-menu"
                  aria-labelledby="SendTransactionForm__network-label"
                  autocomplete="off"
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="SelectNetworkInput__input"
                  id="SendTransactionForm__network-input"
                  placeholder="Enter a cryptoasset name"
                  value=""
                />
                
              </div>
            </div>
          </div>
          <div
            class="hidden"
            data-testid="SelectNetwork__options"
          >
            <div
              class=""
            >
              <ul
                aria-labelledby="SendTransactionForm__network-label"
                class="grid grid-cols-6 gap-3"
                id="SendTransactionForm__network-menu"
                role="listbox"
              />
            </div>
            <div
              class="mt-6"
            >
              <ul
                aria-labelledby="SendTransactionForm__network-label"
                class="grid grid-cols-6 gap-3"
                id="SendTransactionForm__network-menu"
                role="listbox"
              >
                <li
                  class="inline-block cursor-pointer h-21"
                  data-testid="SelectNetwork__NetworkIcon--container"
                >
                  <div
                    aria-label="ARK Devnet"
                    class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
                    data-testid="NetworkIcon-ARK-ark.devnet"
                  >
                    <div
                      class="sc-bdfBwQ caqoGN"
                      data-testid="NetworkIcon__icon"
                      height="30"
                      width="30"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="senderAddress"
        >
          Sender
        </label>
        <div
          data-testid="sender-address"
        >
          <button
            class="relative w-full rounded focus:ring-2 focus:outline-none focus:ring-theme-primary-400"
            data-testid="SelectAddress__wrapper"
            type="button"
          >
            <span
              class="flex absolute inset-0 items-center px-14 w-full border border-transparent"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              />
            </span>
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                class="Circle__CircleWrapper-uw7h4j-0 grnDUY bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
              />
              <div
                class="relative flex flex-1 h-full invisible"
              >
                <input
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="SelectAddress__input"
                  name="senderAddress"
                  readonly=""
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <div
                      class="sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </button>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="fee"
        >
          Transaction Fee
        </label>
        <div
          class="relative"
        >
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 iRRxpY"
            disabled=""
          >
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-theme-secondary-text"
                data-testid="InputCurrency"
                disabled=""
                name="fee"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="pt-2"
    >
      <div
        class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
        type="horizontal"
      />
    </div>
  </section>
</div>
`;

exports[`SendTransactionForm should select a network & update fees 1`] = `
<div>
  <section>
    <div
      class="space-y-5"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
        </label>
        <div>
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SendTransactionForm__network-menu"
            data-testid="SelectNetwork"
            role="combobox"
          >
            <label
              for="SendTransactionForm__network-input"
              id="SendTransactionForm__network-label"
            />
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
                data-testid="SelectNetworkInput__network"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="SendTransactionForm__network-menu"
                  aria-labelledby="SendTransactionForm__network-label"
                  autocomplete="off"
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="SelectNetworkInput__input"
                  id="SendTransactionForm__network-input"
                  placeholder="Enter a cryptoasset name"
                  value=""
                />
                
              </div>
            </div>
          </div>
          <div
            class="hidden"
            data-testid="SelectNetwork__options"
          >
            <div
              class=""
            >
              <ul
                aria-labelledby="SendTransactionForm__network-label"
                class="grid grid-cols-6 gap-3"
                id="SendTransactionForm__network-menu"
                role="listbox"
              />
            </div>
            <div
              class="mt-6"
            >
              <ul
                aria-labelledby="SendTransactionForm__network-label"
                class="grid grid-cols-6 gap-3"
                id="SendTransactionForm__network-menu"
                role="listbox"
              >
                <li
                  class="inline-block cursor-pointer h-21"
                  data-testid="SelectNetwork__NetworkIcon--container"
                >
                  <div
                    aria-label="ARK Devnet"
                    class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
                    data-testid="NetworkIcon-ARK-ark.devnet"
                  >
                    <div
                      class="sc-bdfBwQ caqoGN"
                      data-testid="NetworkIcon__icon"
                      height="30"
                      width="30"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="senderAddress"
        >
          Sender
        </label>
        <div
          data-testid="sender-address"
        >
          <button
            class="relative w-full rounded focus:ring-2 focus:outline-none focus:ring-theme-primary-400"
            data-testid="SelectAddress__wrapper"
            type="button"
          >
            <span
              class="flex absolute inset-0 items-center px-14 w-full border border-transparent"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 2
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                </span>
              </div>
            </span>
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 khDjUE flex-shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                  />
                </div>
              </div>
              <div
                class="relative flex flex-1 h-full invisible"
              >
                <input
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="SelectAddress__input"
                  name="senderAddress"
                  readonly=""
                  value="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <div
                      class="sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </button>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="fee"
        >
          Transaction Fee
        </label>
        <div
          class="relative"
          data-testid="InputFee"
        >
          <div
            class="absolute right-0 -mt-7"
          >
            <div
              class="flex items-center"
            >
              <span
                class="Switch__SwitchText-sc-1fue7gg-0 ijSero"
                disabled=""
                role="button"
              >
                Simple
              </span>
              <label
                class="flex"
              >
                <input
                  class="Toggle__Input-qyyifx-0 WGuGL"
                  disabled=""
                  type="checkbox"
                />
                <div
                  class="Toggle__Handle-qyyifx-1 jztkAY"
                  disabled=""
                >
                  <span
                    class="Toggle__HandleInner-qyyifx-2 iIyzPS"
                    disabled=""
                  />
                </div>
              </label>
              <span
                class="Switch__SwitchText-sc-1fue7gg-0 gQmLAx"
                disabled=""
                role="button"
              >
                Advanced
              </span>
            </div>
          </div>
          <div
            class="w-full inline-flex items-center space-x-2"
            data-testid="ButtonGroup"
            role="radiogroup"
          >
            <button
              aria-checked="false"
              class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 gXhvLe"
              data-testid="ButtonGroupOption"
              role="radio"
              type="button"
            >
              <div>
                <div
                  class="mb-3"
                >
                  Slow
                </div>
                <span>
                  <span
                    class="flex items-center leading-none"
                  >
                    <span
                      class="react-loading-skeleton h-3 my-1 css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </button>
            <button
              aria-checked="true"
              class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 gXhvLe"
              data-testid="ButtonGroupOption"
              role="radio"
              type="button"
            >
              <div>
                <div
                  class="mb-3"
                >
                  Average
                </div>
                <span>
                  <span
                    class="flex items-center leading-none"
                  >
                    <span
                      class="react-loading-skeleton h-3 my-1 css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </button>
            <button
              aria-checked="false"
              class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 gXhvLe"
              data-testid="ButtonGroupOption"
              role="radio"
              type="button"
            >
              <div>
                <div
                  class="mb-3"
                >
                  Fast
                </div>
                <span>
                  <span
                    class="flex items-center leading-none"
                  >
                    <span
                      class="react-loading-skeleton h-3 my-1 css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="pt-2"
    >
      <div
        class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
        type="horizontal"
      />
    </div>
  </section>
</div>
`;

exports[`SendTransactionForm should use static fees if avg is not available 1`] = `
<div>
  <section>
    <div
      class="space-y-5"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
        </label>
        <div>
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SendTransactionForm__network-menu"
            data-testid="SelectNetwork"
            role="combobox"
          >
            <label
              for="SendTransactionForm__network-input"
              id="SendTransactionForm__network-label"
            />
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
                data-testid="SelectNetworkInput__network"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="SendTransactionForm__network-menu"
                  aria-labelledby="SendTransactionForm__network-label"
                  autocomplete="off"
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="SelectNetworkInput__input"
                  id="SendTransactionForm__network-input"
                  placeholder="Enter a cryptoasset name"
                  value=""
                />
                
              </div>
            </div>
          </div>
          <div
            class="hidden"
            data-testid="SelectNetwork__options"
          >
            <div
              class=""
            >
              <ul
                aria-labelledby="SendTransactionForm__network-label"
                class="grid grid-cols-6 gap-3"
                id="SendTransactionForm__network-menu"
                role="listbox"
              />
            </div>
            <div
              class="mt-6"
            >
              <ul
                aria-labelledby="SendTransactionForm__network-label"
                class="grid grid-cols-6 gap-3"
                id="SendTransactionForm__network-menu"
                role="listbox"
              >
                <li
                  class="inline-block cursor-pointer h-21"
                  data-testid="SelectNetwork__NetworkIcon--container"
                >
                  <div
                    aria-label="ARK Devnet"
                    class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
                    data-testid="NetworkIcon-ARK-ark.devnet"
                  >
                    <div
                      class="sc-bdfBwQ caqoGN"
                      data-testid="NetworkIcon__icon"
                      height="30"
                      width="30"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="senderAddress"
        >
          Sender
        </label>
        <div
          data-testid="sender-address"
        >
          <button
            class="relative w-full rounded focus:ring-2 focus:outline-none focus:ring-theme-primary-400"
            data-testid="SelectAddress__wrapper"
            type="button"
          >
            <span
              class="flex absolute inset-0 items-center px-14 w-full border border-transparent"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 2
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                </span>
              </div>
            </span>
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 khDjUE flex-shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                  />
                </div>
              </div>
              <div
                class="relative flex flex-1 h-full invisible"
              >
                <input
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="SelectAddress__input"
                  name="senderAddress"
                  readonly=""
                  value="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <div
                      class="sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </button>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="fee"
        >
          Transaction Fee
        </label>
        <div
          class="relative"
          data-testid="InputFee"
        >
          <div
            class="absolute right-0 -mt-7"
          >
            <div
              class="flex items-center"
            >
              <span
                class="Switch__SwitchText-sc-1fue7gg-0 ijSero"
                disabled=""
                role="button"
              >
                Simple
              </span>
              <label
                class="flex"
              >
                <input
                  class="Toggle__Input-qyyifx-0 WGuGL"
                  disabled=""
                  type="checkbox"
                />
                <div
                  class="Toggle__Handle-qyyifx-1 jztkAY"
                  disabled=""
                >
                  <span
                    class="Toggle__HandleInner-qyyifx-2 iIyzPS"
                    disabled=""
                  />
                </div>
              </label>
              <span
                class="Switch__SwitchText-sc-1fue7gg-0 gQmLAx"
                disabled=""
                role="button"
              >
                Advanced
              </span>
            </div>
          </div>
          <div
            class="w-full inline-flex items-center space-x-2"
            data-testid="ButtonGroup"
            role="radiogroup"
          >
            <button
              aria-checked="false"
              class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 gXhvLe"
              data-testid="ButtonGroupOption"
              role="radio"
              type="button"
            >
              <div>
                <div
                  class="mb-3"
                >
                  Slow
                </div>
                <span>
                  <span
                    class="flex items-center leading-none"
                  >
                    <span
                      class="react-loading-skeleton h-3 my-1 css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </button>
            <button
              aria-checked="true"
              class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 gXhvLe"
              data-testid="ButtonGroupOption"
              role="radio"
              type="button"
            >
              <div>
                <div
                  class="mb-3"
                >
                  Average
                </div>
                <span>
                  <span
                    class="flex items-center leading-none"
                  >
                    <span
                      class="react-loading-skeleton h-3 my-1 css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </button>
            <button
              aria-checked="false"
              class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 gXhvLe"
              data-testid="ButtonGroupOption"
              role="radio"
              type="button"
            >
              <div>
                <div
                  class="mb-3"
                >
                  Fast
                </div>
                <span>
                  <span
                    class="flex items-center leading-none"
                  >
                    <span
                      class="react-loading-skeleton h-3 my-1 css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="pt-2"
    >
      <div
        class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
        type="horizontal"
      />
    </div>
  </section>
</div>
`;
